2015-11-22  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring] Use shared `grSetGlyphGamma'.

	* src/ftcommon.h (FTDemo_String_Context): Remove `gamma_ramp'.
	* src/ftcommon.c (apply_gamma_ramp): Remove.
	(FTDemo_String_Draw): Do not apply gamma correction here.
	* src/ftstring.c (event_gamma_change): Call `grSetGlyphGamma' here.
	(main): Switch from gray to rgb24; update.

2015-11-22  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring] Remove gamma toggle.

	* src/ftstring.c (event_help, Process_Event): Updated.

2015-11-21  Alexei Podtelezhnikov  <apodtele@gmail.com>

	Copy-paste typos.

	* src/ftstring.1: Updated.
	* src/ftstring.c: Updated.

2015-11-19  Alexei Podtelezhnikov  <apodtele@gmail.com>

	Cosmetic improvements.

	* src/ftdiff.c (write_global_info): Do not display zero gamma.
	* src/ftgrid.c (event_gamma_change): Ditto.
	* src/ftview.c (write_header): Ditto.

2015-11-12  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/gblender.c (gblender_reset_key): Fix typo.

2015-11-12  Alexei Podtelezhnikov  <apodtele@gmail.com>

	Define and use GAMMA.

	* src/ftcommon.h (GAMMA): Define new macro.
	* src/ftdiff.c (adisplay_init): Use it.
	* src/ftgrid.c (grid_status_init): Use it.
	* src/ftstring.c (status): Use it.
	* src/ftview.c (status): Use it.

2015-11-11  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftdiff,ftgrid] Default to gamma = 1.8.

	* src/ftcommon.c (FTDemo_Display_New): Do not set gamma.
	* graph/grblit.c (gr_glyph_gamma): Updated.
	* src/ftdiff.c (adisplay_init): Updated.
	* src/ftgrid.c (grid_status_init): Updated.

2015-11-06  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Minor sRGB accuracy update.

	* graph/gblender.c (gblender_set_gamma_table): Updated.

2015-11-06  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview,ftstring] Default to gamma = 1.8.

	* src/ftview.c (status): Updated.
	* src/ftstring.c (status, main): Updated.

2015-10-16  Werner Lemberg  <wl@gnu.org>

	Don't use `aux' as a file name.
