@@ -16,8 +16,8 @@ ftstring \- string viewer
 .SH DESCRIPTION
 .
 .B ftstring
-displays a text string with the given font (white on black), allowing
-to change various rendering and display options interactively.
+displays a text string with the given font, allowing to change
+various rendering and display options interactively.
 .
 .TP
 .B pt
